--- a/NancyDataService/log4net.config
+++ b/NancyDataService/log4net.config
@@ -27,7 +27,7 @@
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="main.log" />
+    <file value="C:/Logs/NancyDataService.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
