simplified calling options.  general cleanup

--- a/NancyDataService/NancyDataService.csproj
+++ b/NancyDataService/NancyDataService.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Platforms>AnyCPU;x86;x64</Platforms>
+    <Company>Ron Mittelman</Company>
+    <Authors>Ron Mittelman</Authors>
+    <Description>Select, Insert, Update, Delete from Access, MySql, Sql databases</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.6.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.3" />
     <PackageReference Include="MySql.Data" Version="8.0.20" />
     <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0" />
