Simplified Filter collection.  Updated to work with SQL Server

--- a/NancyDataService/App.config
+++ b/NancyDataService/App.config
@@ -5,7 +5,7 @@
     <add key="connection" value="Data Source=.\FEDCONNECT;Initial Catalog=Employees;"/>
     <!-- DbFlavor currently supports "Access", "Sql", "MySql" -->
     <add key="DbFlavor" value="MySql"/>
-    <add key="SqlConnection" value="server=.\FEDCONNECT;database=Employees;Trusted_Connection=True"/>
+    <add key="SqlConnection" value="Server=(LocalDb)\MSSQLLocalDB;Database=BNCConejo;Trusted_Connection=True;"/>
     <add key="MySqlConnection" value="server=52.73.52.91;uid=shamrocks;pwd=password;database=fc5;"/>
     <add key="AccessConnection" value="Provider=Microsoft.ACE.OLEDB.16.0;Data Source=C:\Brandeis\BNCConejo_Data.accdb;Persist Security Info=False;"/>
   </appSettings>
